Fix netlify function.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="/.netlify/functions/includes/includes.js"></script>
+        <script src="netlify/functions/includes/includes.js"></script>
         <script> includeHTML('includes/favicon.html', 'head'); </script>
 
         <link rel="stylesheet" href="style.css">
