--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html>
     <head>
+        <!-- Add script for serverless includes -->
         <script src="netlify/functions/includes/includes.js"></script>
+
         <script> includeHTML('includes/favicon.html', 'head'); </script>
 
         <link rel="stylesheet" href="style.css">
